# SimpleGrpcExample

./: .gitignore
go/: .gitignore  generate.go  go.mod  go.sum  main.go  sqlc.yaml
go/address_service/: address_grpc.go  query.sql  schema.sql
go/address_service/proto/: address.proto  address_service.proto
java-blocking/: build.gradle
java-blocking/gradle/: libs.versions.toml
java-blocking/src/main/java/com/github/fidgetting/: AddressRepository.java  AddressService.java  Main.java
java-reactive/: build.gradle
java-reactive/gradle/: libs.versions.toml
java-reactive/src/main/java/com/github/fidgetting/: AddressRepository.java  AddressService.java  Main.java
java-reactive/src/main/proto/: address.proto
java-reactive/src/main/resources/: logback.xml
kotlin/: README.md  build.gradle  docker-compose.yml  settings.gradle
kotlin/gradle/: libs.versions.toml
kotlin/src/main/kotlin/: Main.kt
kotlin/src/main/kotlin/com/github/fidgetting/: AddressRepository.kt  AddressService.kt  (+1 more)
kotlin/src/main/proto/: address.proto  address_service.proto
kotlin/src/main/resources/: logback.xml
kotlin/src/main/resources/db/migration/: V0__address-table.sql
rust/: Cargo.toml  build.rs
rust/.sqlx/: query-add370a7f6730b55576f4509c100355432df4019ca9260b2e3acfc2a495cba6d.json
rust/src/: address_repository.rs  main.rs
rust/src/protos/: address.proto  address_service.proto
scala/: build.gradle
scala/gradle/: libs.versions.toml
scala/src/main/proto/: address.proto  address_service.proto
scala/src/main/resources/: logback.xml
scala/src/main/scala/: Main.scala
(+26 files in other folders)
