[package]
name = "simple-grpc"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "address_server"
path = "src/main.rs"

[dependencies]
futures = "~0.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
structopt = "0.3.26"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.20.0", features = [ "rt", "macros" ] }
protobuf = "3.3.0"
protobuf-json-mapping = "3.3.0"
log = "0.4.20"
simple_logger = "4.3.3"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-rust = "2.28.0"
